# Noetic

./: CHANGELOG.md  README.md  benchmark_pawp.py  pyproject.toml
core/: __init__.py
docs/: architecture.md  cognitive_architecture.md  pyfolds_digits_training.json  pyfolds_digits_training.md
experiments/: compare_wordpiece_vs_pawp.py  train_mnist_stub.py
noetic_pawp/: __init__.py  align.py  associative_memory.py  concept_normalizer.py  config.py  feature_flags.py  g2p.py  gating.py  interfaces.py  ipa_encoder.py  leibreg_bridge.py  mmrn_prototype.py  noetic_model.py  pyfolds_encoder.py  retrieval.py  rive_encoder.py  rive_mpjrd.py  tokenizer.py  wordspace_tokenizer.py
noetic_pyfolds_bridge/: __init__.py  bridge.py
notebooks/: noetic_demo.ipynb
pyfolds/: __init__.py
scripts/: _bootstrap.py  check_health.py  demo_encode.py  rive_mpjrd_train.py  run_pawp_demo.py  test_noetic_leibreg.py  train_mmrn_projective_ocr.py  train_mnist.py  train_noetic_leibreg.py  train_noetic_pyfolds.py  train_pyfolds_digits.py  train_text_baseline.py
tests/: test_api.py  test_associative_attention.py  test_associative_memory.py  test_bridge.py  test_bridge_equivalence.py  test_cognitive_core.py  test_concept_normalizer.py  test_dlpack_bridge.py  test_export.py  test_fusion.py  test_g2p.py  test_ipa_encoder.py  test_leibreg_wordspace.py  test_mmrn_projective_ocr.py  test_model_interface.py  test_noetic_controllers.py  test_noetic_model.py  test_noetic_system.py  test_pawp_multimodal_mapping.py  test_pawp_pipeline.py  test_pyfolds_encoder.py  test_rive_mpjrd.py  test_tf_pipeline.py  (+5 more)
(+98 files in other folders)
