[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawp-prototype"
version = "0.4.0"
description = "PAWP modular prototype with tokenizer + PyTorch architecture stubs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Noetic Team"}]

[project.optional-dependencies]
torch = ["torch>=2.2", "torchvision>=0.17"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
